# LLMetal

./: .gitignore  CHANGELOG.md  Cargo.toml  INFERENCE_OLD_ATTEMPT.md  INFERENCE_PATH.md  INFERENCE_PATH_2.md  PSEUDOCODE_GPU.md  PSEUDOCODE_METAL.md  README.md  inference.rs  inference_2.rs  metadata.txt
docs/: inference-path.md
docs/notes/: README.md  detailed-candle-trace.rs  yalm-cuda-full.md
examples/: add_two_vectors.metal  add_two_vectors.rs
src/: add_vectors.metal  gguf_loader.rs  gpu.rs  inference.rs  kernels.metal  main.rs  metal.rs  model.rs  tensor.rs  tests.rs  tokenizer.rs
